fix: input icons in register form move out of place when errors are shown

--- a/client/src/Components/Authentication/Register/RegisterStyles.scss
+++ b/client/src/Components/Authentication/Register/RegisterStyles.scss
@@ -119,6 +119,10 @@ $modal-border: rgba($gold-primary, 0.3);
   font-size: 1rem;
 }
 
+.center-input-icon {
+  top: 27%;
+}
+
 .input-group input {
   width: 100%;
   padding: 15px 15px 15px 45px;
